added homepage content

--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -11,3 +11,15 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.jumbotron {
+  width: 100%;
+  color: #0b2e13;
+}
+
+#baseballImg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
