--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +8,19 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.PlayersPage {
+  align-content: flex-start;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+.AboutPage {
+  align-content: flex-start;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
 }
 
 code {
@@ -22,4 +38,13 @@ code {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex-basis: 0;
+  width: 100%;
+  align-content: center;
 }
