--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -40,7 +40,6 @@ code {
   width: 50%;
 }
 
-<<<<<<< Updated upstream
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -48,10 +47,10 @@ code {
   flex-basis: 0;
   width: 100%;
   align-content: center;
-=======
+}
+
 .MyFooter{
   background-color: green;
   width: 100%;
   height: 100%
->>>>>>> Stashed changes
 }
