--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -1,3 +1,6 @@
+* {
+  margin: 0px;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -7,7 +10,47 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+.PlayersPage {
+  align-content: flex-start;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+}
+.AboutPage {
+  align-content: flex-start;
+  margin-left: 0;
+  margin-right: 0;
+  width: 100%;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.jumbotron {
+  width: 100%;
+  color: #0b2e13;
+}
+
+#baseballImg {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: flex-start;
+  flex-basis: 0;
+  width: 100%;
+  align-content: center;
+}
+
+.MyFooter{
+  background-color: green;
+  width: 100%;
+  height: 100%
 }
