--- a/reactapp/src/components/App/App.css
+++ b/reactapp/src/components/App/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-body {
-  background-color: #282c34;
+  background-color: #111b1d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
