--- a/reactapp/src/components/Page/HomePage/HomePage.css
+++ b/reactapp/src/components/Page/HomePage/HomePage.css
@@ -2,20 +2,19 @@
     background-image: url("../../../statics/ballpark.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
-    height: 100%;
+    height: 100%;;
 
 }
 
 .searchContainer {
     width: 100%;
-    height: 800px;
+    height: 936px
 }
 
 .title {
     margin: 50px;
     font: 400 60px/1.5 'Pacifico', Helvetica, sans-serif;
     color: white;
-    text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
 }
 
 
