--- a/reactapp/src/components/Page/AboutPage/AboutPage.css
+++ b/reactapp/src/components/Page/AboutPage/AboutPage.css
@@ -55,3 +55,12 @@
     height: 300px;
     align-self: center;
 }
+
+.teamRow {
+    width: 100%;
+    padding-left: 40px;
+    padding-right: 40px;
+    margin-bottom: 80px;
+    display: flex;
+    justify-content: center;
+}
