--- a/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
+++ b/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
@@ -23,7 +23,7 @@
     font: 400 50px/1.5 'Pacifico', Helvetica, sans-serif;
 }
 
-.rosterRow {
+.teamInfoRow {
     background-color: rgba(14, 156, 161, 0.26);
     width: 100%;
     padding-left: 80px;
@@ -39,3 +39,29 @@
     justify-content: center;
     align-content: center;
 }
+
+.navRow {
+    width: 100%;
+    margin-left: 20px;
+    margin-right: 20px;
+    
+    display: flex;
+    justify-content: center;
+}
+
+/* .rosterRow {
+    background-color: rgba(14, 156, 161, 0.26);
+    width: 100%;
+    padding-left: 80px;
+    padding-right: 80px;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    margin-bottom: 40px;
+    border-radius: 1%;
+    border: solid rgb(207, 193, 193);
+    border-width: 3px 3px;
+    
+    display: flex;
+    justify-content: center;
+    align-content: center;
+} */
