--- a/reactapp/src/components/Page/ScoresPage/ScoresPage.css
+++ b/reactapp/src/components/Page/ScoresPage/ScoresPage.css
@@ -9,3 +9,24 @@
     display: flex;
     justify-content: center;
 }
+
+.titleRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+}
+
+.datePickerRow {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;    
+}
+
+.titleStyle {
+    font: 400 25px/1.5 'Pacifico', Helvetica, sans-serif;
+
+}
