fixed centering, added directions on click of marker, added highlighting on tabs

--- a/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
+++ b/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
@@ -47,6 +47,15 @@
     
     display: flex;
     justify-content: center;
+    
+}
+
+.teamNavItem {
+    opacity:0.5;
+}
+
+.teamNavItem:hover {
+    opacity:1;
 }
 
 /* .rosterRow {
