--- a/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
+++ b/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
@@ -50,6 +50,14 @@
     justify-content: center;
 } */
 
+.playerNavItem {
+    opacity:0.5;
+}
+
+.playerNavItem:hover {
+    opacity:1;
+}
+
 .statsRow {
     width: 100%;
     padding-top: 40px;
