twitter feed of mlb on homepage

--- a/reactapp/src/components/Page/HomePage/HomePage.css
+++ b/reactapp/src/components/Page/HomePage/HomePage.css
@@ -27,3 +27,21 @@
 .searchBar {
     width: 40%;
 }
+
+.twitterTimelineEmbed {
+    width: 100%;
+}
+
+.row {
+    width: 100%;
+    padding-right: 0;
+    padding-left: 0;
+    margin-right: 0 !important;
+    margin-left: 0 !important;
+}
+
+.col{
+    align-content: center;
+    padding-right: 0 !important;
+    padding-left: 0 !important;
+}
