--- a/reactapp/src/components/Page/TicketsPage/TicketsPage.css
+++ b/reactapp/src/components/Page/TicketsPage/TicketsPage.css
@@ -1,15 +1,15 @@
-.playersPageContainer {
+.ticketsPageContainer {
     display: flex;
     justify-content: center;
 }
 
-.playerFormStyle {
+.ticketsFormStyle {
     padding: 1% 7% 1% 7%;
     /* border-bottom: 2px solid rgb(207, 193, 193); */
     margin: 20px;
 }
 
-.playerSearchButtonStyle {
+.ticketsSearchButtonStyle {
     display:flex;
     justify-content: flex;
 }
@@ -22,6 +22,12 @@
     margin: 20px;
 }
 
-.playerSearchBar {
+.ticketsSearchBar {
     width: 300px;
+}
+
+.ticketCardStyle {
+    width: 250px;
+    height:350px;
+    margin: 16px;
 }
