--- a/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
+++ b/reactapp/src/components/Page/TeamsPage/DetailedTeamPage.css
@@ -8,6 +8,13 @@
     justify-content: center;
 }
 
+.contentRow {
+    width: 100%;
+    margin: 20px;
+    display: flex;
+    justify-content: center;
+}
+
 .teamNameRow {
     width: 100%;
     padding-left: 80px;
