--- a/reactapp/src/components/Page/HomePage/HomePage.css
+++ b/reactapp/src/components/Page/HomePage/HomePage.css
@@ -1,14 +1,14 @@
-.jumboTron {
+/* .jumboTron {
     background-image: url("../../../statics/ballpark.jpeg");
     background-size: cover;
     background-repeat: no-repeat;
     height: 100%;;
 
-}
+} */
 
-.searchContainer {
-    width: 100%;
-    height: 936px
+.containerStyle {
+    display: flex;
+    justify-content: center;
 }
 
 .title {
@@ -17,13 +17,13 @@
     color: white;
 }
 
-
-.searchBarContainer{
+.carouselRow {
+    background-color: rgba(14, 156, 161, 0.26);
+    width: 100%;
+    margin: 0px;
     display: flex;
-    align-items: center;
     justify-content: center;
-}
 
-.searchBar {
-    width: 40%;
+    border-top: 1px solid aliceblue;
+    border-bottom: 1px solid aliceblue;
 }
