--- a/reactapp/src/components/Page/HomePage/CarouselContainer.css
+++ b/reactapp/src/components/Page/HomePage/CarouselContainer.css
@@ -1,7 +1,22 @@
 .carouselItem > img{
     height: 40%;
     width: 100%;
+    /* opacity: .4; */
 }
+
+.carouselContainerStyle {
+    left: 39%;
+    top: 24%;
+    background-color: rgba(12, 12, 12, .95);
+    border-radius: 3%;
+    border: 2px solid white;
+}
+/* 
+.titleStyle {
+    margin: 50px;
+    font: 400 60px/1.5 'Pacifico', Helvetica, sans-serif;
+    color: white;
+} */
 
 .carouselStyle {
     width: 100%;
