--- a/reactapp/src/components/Page/AboutPage/AboutPage.css
+++ b/reactapp/src/components/Page/AboutPage/AboutPage.css
@@ -65,3 +65,35 @@
     display: flex;
     justify-content: center;
 }
+
+:local(.cardStyle){
+    margin:20px;  
+    width: 250px; 
+    height: 450px;
+    border: solid rgb(207, 193, 193);
+    border-width: 2px;
+}
+
+:local(.cardTextStyle) {
+    color:black;
+    font-size: 12px;
+    margin: 0px;
+}
+
+:local(.cardTitleStyle){
+    color:black;
+    font-size: 20px;
+    margin-bottom: 0px;
+}
+
+:local(.cardSubtitleStyle){
+    color: black;
+    font-size: 15px;
+    color: grey;
+}
+
+:local(.cardImgStyle) {
+    width:246px;
+    height:200px;
+    align-self: center;
+}
