--- a/reactapp/src/components/Page/HomePage/HomePage.css
+++ b/reactapp/src/components/Page/HomePage/HomePage.css
@@ -17,30 +17,39 @@
     color: white;
 }
 
-.carouselRow {
+/* .carouselRow { */
     /* background-color: rgba(14, 156, 161, 0.26); */
-    width: 100%;
+    /* width: 100%;
     display: flex;
     justify-content: center;
 
     border-top: 1px solid aliceblue;
-    border-bottom: 1px solid aliceblue;
-}
+    border-bottom: 1px solid aliceblue; */
+/* } */
 
 .twitterTimelineEmbed {
     width: 100%;
 }
 
-.row {
+/* .row {
     width: 100%;
     padding-right: 0;
     padding-left: 0;
     margin-right: 0 !important;
     margin-left: 0 !important;
-}
+} */
 
-.col{
+/* .col{
     align-content: center;
     padding-right: 0 !important;
     padding-left: 0 !important;
+} */
+
+:local(.titleStyle){
+    width: auto;
+    margin:50px auto;
+    display: flex;
+    justify-content:center;
+    font: 400 60px/1.5 'Pacifico', Helvetica, sans-serif;
+    color: white;
 }
