--- a/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
+++ b/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
@@ -72,3 +72,8 @@
     border-radius: 50%;
     border: 2px solid white;
 }
+
+:local(.playerRowCaption){
+    width: 100%;
+    margin-bottom: 10px
+}
