Player and BoxScore CSS

--- a/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
+++ b/reactapp/src/components/Page/PlayersPage/DetailedPlayerPage.css
@@ -77,3 +77,14 @@
     width: 100%;
     margin-bottom: 10px
 }
+
+.statsTableHead{
+    color:white;
+}
+
+.statsTableBody{
+    color:white;
+}
+.pitcherStatLink{
+    color:white;
+}
