--- a/reactapp/src/index.css
+++ b/reactapp/src/index.css
@@ -66,3 +66,10 @@ code {
   justify-content:center;
 
 }
+
+.unloadedRowStyle{
+  width: 100%;
+  display:flex;
+  justify-content:center;
+  margin-bottom:40px;
+}
